# record

./: .gitignore  .metadata  AUDIO_EFFECTS.md  CHANGELOG.md  README.md  debug_audio.cpp  melos.yaml  pubspec.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yaml
android/: .gitignore  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
doc/: bg_recording.md
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: audio_player.dart  audio_recorder.dart  main.dart
ios/: record.podspec
ios/Classes/: RecordPlugin.h  RecordPlugin.m  SwiftRecordPlugin.swift
lib/: record.dart
record/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
record/android/: build.gradle
record/android/src/main/: AndroidManifest.xml
record/example/: .gitignore  README.md  pubspec.yaml
record/example/android/: build.gradle  settings.gradle
record/example/android/app/: build.gradle
record/example/ios/Runner/: Info.plist
record/example/ios/Runner.xcodeproj/: project.pbxproj
record/example/lib/: audio_player.dart  audio_recorder.dart  generated_plugin_registrant.dart  main.dart  wave_widget.dart
record/example/lib/platform/: audio_recorder_io.dart  audio_recorder_platform.dart  audio_recorder_web.dart
record/example/linux/: CMakeLists.txt
record/example/linux/flutter/: generated_plugins.cmake
record/example/macos/Flutter/: GeneratedPluginRegistrant.swift
record/example/macos/Runner/: Info.plist
record/example/macos/Runner.xcodeproj/: project.pbxproj
record/example/web/: index.html
record/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
record/ios/: record.podspec
record/ios/Classes/: RecordPlugin.m  SwiftRecordPlugin.swift
record/lib/: record.dart
record/lib/src/: record.dart
record/test/: devices_test.dart
record_android/: CHANGELOG.md  README.md  pubspec.yaml
record_android/android/: build.gradle  settings.gradle
record_darwin/: CHANGELOG.md  README.md  pubspec.yaml
record_darwin/darwin/: record_darwin.podspec
record_darwin/darwin/Classes/: RecordConfig.swift  RecordPlugin.h  RecordPlugin.m  Recorder.swift  RecorderFormat.swift  RecorderProtocol.swift  SwiftRecordPlugin.swift
record_darwin/ios/: record_darwin.podspec
record_darwin/ios/Classes/: RecordConfig.swift  RecordPlugin.h  Recorder.swift  RecorderFormat.swift  RecorderIOS.swift
record_darwin/macos/: record_darwin.podspec
record_darwin/macos/Classes/: RecordPlugin.h  RecordPlugin.m  Recorder.swift  RecorderMacOS.swift  RecorderProtocol.swift  SwiftRecordPlugin.swift
record_ios/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
record_ios/ios/: record_ios.podspec
record_ios/ios/Classes/: SwiftRecordPlugin.swift
record_ios/ios/record_ios/: Package.swift
record_linux/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
record_linux/assets/fmedia/: fmedia
record_linux/lib/: record_linux.dart
record_linux/linux/: CMakeLists.txt  record_linux_plugin.cc
record_linux/linux/fmedia/: fmedia  fmedia.conf
record_macos/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
record_macos/example/: .gitignore  README.md  pubspec.yaml
record_macos/example/lib/: main.dart
record_macos/lib/: record_macos.dart
record_macos/macos/: record_macos.podspec
record_macos/macos/Classes/: RecordMacosPlugin.swift
record_macos/macos/record_macos/: Package.swift
record_platform_interface/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
record_platform_interface/lib/: record_platform_interface.dart
record_platform_interface/lib/src/: method_channel_record.dart  record_method_channel.dart  record_method_channel_mixin.dart  record_platform.dart  record_platform_interface.dart
record_web/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
record_web/assets/: webm_duration_fix.js
record_web/assets/js/: record.fixwebmduration.js  record.worklet.js
record_web/lib/: audio_context.dart  import_js_library.dart  mime_types.dart  record_web.dart  recorder.dart  webm_duration_fix.dart  webm_duration_fix_js.dart
record_web/lib/encoder/: encoder.dart  pcm_encoder.dart  wav_encoder.dart
record_web/lib/js/: js_import_library.dart  js_webm_duration_fix.dart
record_web/lib/recorder/: recorder.dart
record_web/web/: index.html  manifest.json
record_web/windows/: CMakeLists.txt
record_web/windows/runner/: Runner.rc  main.cpp
record_windows/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
record_windows/assets/fmedia/: fmedia.conf
record_windows/example/: README.md  pubspec.yaml
record_windows/example/lib/: main.dart
record_windows/example/windows/: CMakeLists.txt
record_windows/lib/: record_windows.dart
record_windows/windows/: .gitignore  CMakeLists.txt  event_stream_handler.h  record.cpp  record.h  record_config.h  record_iunknown.cpp  record_mediatype.cpp  record_new.cpp  record_old.cpp  record_readercallback.cpp  record_windows.cpp  record_windows.h  record_windows_plugin.cpp  record_windows_plugin.h  record_windows_plugin_c_api.cpp  utils.h
record_windows/windows/include/record_windows/: record_windows_plugin.h  record_windows_plugin_c_api.h
(+159 files in other folders)
